# kr-forensic-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
kr_forensic_core/: __init__.py  constants.py  paths.py  schemas.py
tests/: conftest.py  test_constants.py
