[project]
name = "kr-forensic-core"
version = "1.0.0"
requires-python = ">=3.11"
description = "Shared constants, schemas, and path conventions for the Korean forensic accounting ecosystem"
authors = [{name = "pon00050"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["forensic-accounting", "korea", "dart", "constants"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Repository = "https://github.com/pon00050/kr-forensic-core"
Issues = "https://github.com/pon00050/kr-forensic-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kr_forensic_core"]

[tool.uv]
compile-bytecode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
